--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -133,7 +133,7 @@ Die Indikatoren für eine gelungene Oxidierung sind, dass die für die leitende 
 
 %\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
-Eine Testplatte wurden in ein Wasserstoffperoxid-Bad gegeben und nach 1h wieder entnommen. Leider war dieser Oxidierungsversuch nicht erfolgreich.
+Eine Testplatte wurden in ein 40\%-Wasserstoffperoxid-Bad gegeben und nach 1h wieder entnommen. Leider war dieser Oxidierungsversuch nicht erfolgreich.
 Nun soll ein Langzeittest über mehrere Tage Erkenntnisse darüber geben, ob der Oxidierungsvorgang bei einer längeren Einwirkungsdauer funktioniert. Dies war nicht der Fall.
 
 Somit lässt sich festhalten, dass eine Oxidierung mittels Wasserstoffperoxid bei Raumtemperatur nicht möglich ist.
