--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -51,7 +51,7 @@ Abbildung \ref{Fotolackverfahren} zeigt, dass durch das Fotolackverfahren ein un
 \begin{figure}[t]
   \centering
   \includegraphics[width=\linewidth, keepaspectratio]{Bilder/Fotolackverfahren}
-  \caption{Glasplatte mit Fotoladck beschichtet (links) und nach der Ätzung (rechts)}
+  \caption{Glasplatte mit Fotolack beschichtet (links) und nach der Ätzung (rechts)}
   \label{Fotolackverfahren}
 \end{figure}
 
