--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -1,5 +1,13 @@
 \section{LCD}
 \textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.
+
+\subsection{Testplatine}
+Um herauszufinden, welche Strukturen sich mit einem selbst-hergestellten LCD darstellen lassen, wurde eine Testplatine entwickelt (Abbildung \ref{testmuster}).
+TODO!!!! 
+\ref{testmuster_seiten}
+
+
+\label{testmuster-seite1}
 \subsection{Funktionsweise}
 
 \begin{figure}[t]
@@ -111,6 +119,7 @@ Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad (Natriumpersulf
   \label{testmuster-seite2}
   }
  \caption{Testmuster obere und untere Seite}
+  \label{testmuster_seiten}
  \end{figure}
 
 Qualitativ waren keine Unterschiede zu erkennen aber der Vorteil der Salzsäure liegt darin, dass sie die Ätzung schneller durchführt. Deshalb wird diese Methode gewählt.
