--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -2,9 +2,13 @@
 \textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.
 
 \subsection{Testplatine}
-Um herauszufinden, welche Strukturen sich mit einem selbst-hergestellten LCD darstellen lassen, wurde eine Testplatine entwickelt (Abbildung \ref{testmuster}).
-TODO!!!! 
-\ref{testmuster_seiten}
+Um herauszufinden, welche Strukturen sich mit einem selbst-hergestellten LCD darstellen lassen, wurde ein Testmuster mit verschiedenen Anzeigen entwickelt (Abbildung \ref{testmuster}).
+Durch das Testmuster wurde die Anzeige von beliebigen Motiven, und der kleinsten Liniendicke für die Anzeige getestet.
+Dazu wurde die Renard-Serie R''5 verwendet, jedoch war auch die kleinste gewählte Linienstärke von 0,4\,mm möglich.
+Aus dem Testmuster wurden zwei Vorlagen für die beiden Glasplatten erstellt, die zusätzlich noch die Stromzuleitungen enthalten
+(Abbildung \ref{testmuster_seiten}).
+Dies wurde zum Testen davon verwendet, ob die Dicke der Zuleitung zu einem anderen Verhalten führt.
+Jedoch konnte keines beobachtet werden.
 
 
 \label{testmuster-seite1}
