--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -29,7 +29,10 @@ Das Display besteht aus zwei zusammengeklebten Glasplatten mit einem Abstand von
 \item Außerhalb der Glasplatten: Polarisationsfolien (Markierung 1 und 5)
 \item Eine Reflektorfolie auf einer Seite (Markierung 6)
 \end{itemize}
-Die Glasplatten werden so präpariert, dass die zigarrenförmige Moleküle auf jeweils einer Glasplatte in eine Richtung zeigen. Auf der gegenüberliegenden Seite sind sie um 90 Grad gedreht. Der Flüssigkristall beschreibt eine “Schraubenstruktur”. Diese verschraubte Struktur veranlasst polarisiertes Licht, ihr zu folgen. Ohne Spannung wird die Polarisationsebene um 90 Grad gedreht und das Licht wird durchgelassen und reflektiert. Beim Anlegen von Spannung (ca. 3V Wechselspannung -> siehe Kapitel \ref{sec:elektronik}) richten sich die Moleküle kollektiv senkrecht zu den Elektroden aus. Somit existiert also für das Polarisationslicht keine Schraubenstruktur mehr. Folglich wird beim Durchgang durch die Zelle der Polarisationszustand nicht beeinflusst, was schließlich dazu führt, dass die Bereiche dunkel erscheinen (Quellen: \cite{Bauanleitung} \cite{aufbau_und_funktion})
+Die Glasplatten werden so präpariert, dass die zigarrenförmigen Moleküle auf jeweils einer Glasplatte in eine Richtung zeigen. Auf der gegenüberliegenden Seite sind sie um 90 Grad gedreht. Der Flüssigkristall beschreibt eine “Schraubenstruktur”.
+Diese verschraubte Struktur veranlasst polarisiertes Licht, ihr zu folgen. Ohne Spannung wird die Polarisationsebene um 90 Grad gedreht und das Licht wird durchgelassen und reflektiert. Beim Anlegen von Spannung (siehe Kapitel \ref{sec:elektronik}) richten sich die Moleküle kollektiv senkrecht zu den Elektroden aus.
+Somit existiert also für das Polarisationslicht keine Schraubenstruktur mehr.
+Folglich wird beim Durchgang durch die Zelle der Polarisationszustand nicht beeinflusst, was schließlich dazu führt, dass die Bereiche dunkel erscheinen (Quellen: \cite{Bauanleitung} \cite{aufbau_und_funktion})
 
 
 %\subsection{Produktionsschritte}
@@ -94,7 +97,7 @@ Wegen der oben genannten Gründe greifen wir für die Herstellung unseres Displa
 \subsection{Ätzen der Struktur}
 %\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.
 
-Um die Elektroden freizulegen muss an allen Stellen, an denen das Display nichts anzeigen soll die leitende Schicht weggeätzt werden. Dies ist daran zu erkennen, dass die brauen Färbung der leitenden Indium-Zinn Schicht vollständig verschwindet (Abbildung \ref{Glasscheibe_nach_Aetzvorgang}). Hierbei stehen zwei Verfahren zur Auswahl.\\
+Um die Elektroden freizulegen muss an allen Stellen, an denen das Display nichts anzeigen soll die leitende Schicht weggeätzt werden. Dies ist daran zu erkennen, dass die braune Färbung der leitenden Indium-Zinn Schicht vollständig verschwindet (Abbildung \ref{Glasscheibe_nach_Aetzvorgang}). Hierbei stehen zwei Verfahren zur Auswahl.\\
 
 \subsubsection*{Salzsäure}
 
