braune nicht brauen

--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -136,12 +136,12 @@ Qualitativ waren keine Unterschiede zu erkennen aber der Vorteil der Salzsäure 
 %\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
 Um die Oxidierung der Indium-Zinn Schicht der Glasplatten zu Indium-Zinn-Oxid zu erreichen, wurden mehrere Verfahren getestet. Im Folgenden werden diese vorgestellt und auf ihre Einsetzbarkeit überprüft.
-Die Indikatoren für eine gelungene Oxidierung sind, dass die für die leitende Schicht typische brauen Färbung merklich verschwindet und eine Messung mittels eines Multimeters eine nennenswerte Änderung der Leitfähigkeit ergibt.
+Die Indikatoren für eine gelungene Oxidierung sind, dass die für die leitende Schicht typische braune Färbung merklich verschwindet und eine Messung mittels eines Multimeters eine nennenswerte Änderung der Leitfähigkeit ergibt.
 
 %Die Indikatoren für eine gelungene Oxidierung sind:
 
 \begin{itemize}
-\item Die für die leitende Schicht typische brauen Färbung muss merklich verschwinden
+\item Die für die leitende Schicht typische braune Färbung muss merklich verschwinden
 \item Eine Messung mittels eines Multimeters muss eine Nennenswerte Änderung der Leitfähigkeit ergeben\\
 \end{itemize}
 
