--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -173,7 +173,7 @@ Da die Oxidierung im Ofen das einzig funktionierende und effiziente Verfahren is
 \subsection{Ausrichtung der Glasplatten}
 
 Die Glasplatten müssen exakt übereinander liegen, sodass sich die Anzeigesymbole perfekt gegenüberstehen. Denn nur wo sie sich exakt gegenüber liegen, wird eine scharfe Anzeige möglich sein.
-Aus diesem Grund haben wir zuerst kleiner Punkte mit dem Folienplotter ausgeschnitten und vor dem Oxidationsvorgang auf den Glasplatten positioniert (vergleiche Abbildung \ref{testmuster}), denn zu diesem Zeitpunkt ist die braune leitende Schicht noch gut sichtbar. Allerdings schmelzen dies Punkte, wenn man die Glasplatten zur Oxidierung in den Ofen gibt, weshalb diese Methode nicht empfehlenswert ist.
+Aus diesem Grund haben wir zuerst kleine Punkte mit dem Folienplotter ausgeschnitten und vor dem Oxidationsvorgang auf den Glasplatten positioniert (vergleiche Abbildung \ref{testmuster}), denn zu diesem Zeitpunkt ist die braune leitende Schicht noch gut sichtbar. Allerdings schmelzen dies Punkte, wenn man die Glasplatten zur Oxidierung in den Ofen gibt, weshalb diese Methode nicht empfehlenswert ist.
 Es hat sich herausgestellt, dass die Oxidierung im Ofen die leitende Struktur nicht komplett durchsichtig macht. Deshalb ist eine extra Aufbringung von Ausrichtungspunkten oder Ähnlichem nicht notwendig.\\
 Die Platten können ohne Probleme anhand der schwachen braunen Restfärbung ausgerichtet werden.
 
@@ -196,11 +196,11 @@ Anschließend die zweite Glasplatte auflegen und zur Ersten ausrichten, dass die
 Nur sehr wenig Flüssigkristall mit einer Pipette entnehmen und an eine offene Seite auftragen. Durch den Kapillareffekt zieht dieser von selbst ein (siehe Abbildung \ref{Einfuehren_des_Fluessigkristalls}). Wenn das Display komplett vom Flüssigkristall durchzogen ist können die beiden noch offenen Seiten ebenfalls mit 2-Komponentenkleber verklebt werden.\\
 
 Wichtig ist, dass nicht an beiden Seiten der Flüssigkristall aufgetragen wird, sondern nur an einer.
-Die Abstandhalter in eine Richtung ausrichten, sodass kein Folienstreifen senkrecht zu einer anderen steht. Dadurch wird ein gutes einziehen des Flüssigkristalls gewährleistet. Querliegende Folienabschnitte verhindern einen zügigen und vollständigen Einzug.
+Die Abstandhalter in eine Richtung ausrichten, sodass kein Folienstreifen senkrecht zu einem anderen steht. Dadurch wird ein gutes einziehen des Flüssigkristalls gewährleistet. Querliegende Folienabschnitte verhindern einen zügigen und vollständigen Einzug.
 Außerdem sollte darauf geachtet werden, dass die Folien am Rand angebracht werden. Würde die Folie in die Mitte gelegt kann an diese Stelle kein Flüssigkristall gelangen und somit entstehen Flecken an diesen Stellen (Vergleiche Abbildung \ref{Spannung_anlegen}).
 
 \subsection{Anzeigefähigkeit}
-Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt diese sicher mit Spannung und sie können somit angezeigt werden. Die kleinste Struktur beim Strukturtest wird ohne Probleme angezeigt (Dicke 0,4mm). Der Grund dafür sind die scharfen Kanten, die durch den Folienplott erreicht werden. Die Ausrichtung ist gut möglich, da die Struktur nach der Oxidierung der Glasplatten noch leicht, aber dennoch gut sichtbar ist. Komplexe Strukturen (Walter White, Darth Vader, Jürgen) (Vergleiche Abbildung \ref{testmuster}) können ebenso ohne Probleme angezeigt werden.
+Selbst die kleinste Zuleitung (Dicke 1\,mm) bei den kleinen Rechtecken versorgt diese sicher mit Spannung und sie können somit angezeigt werden. Die kleinste Struktur beim Strukturtest wird ohne Probleme angezeigt (Dicke 0,4\,mm). Der Grund dafür sind die scharfen Kanten, die durch den Folienplott erreicht werden. Die Ausrichtung ist gut möglich, da die Struktur nach der Oxidierung der Glasplatten noch leicht, aber dennoch gut sichtbar ist. Komplexe Strukturen (Walter White, Darth Vader, Jürgen) (Vergleiche Abbildung \ref{testmuster}) können ebenso ohne Probleme angezeigt werden.
 
 \begin{figure}[]
     \centering
