--- a/paper/Kapitel/elektronik.tex
+++ b/paper/Kapitel/elektronik.tex
@@ -41,7 +41,8 @@ Tabelle \ref{tab:volt} zeigt die Messungen der Stromstärken in Mikroampere der 
 Zur Feststellung mit welcher Frequenz das LCD angesteuert werden sollte, haben wir eine Rechteckspannung mit unterschiedlichen Frequenzen an verschiedenen Elektroden angelegt. Unter einer Frequenz von 30\,Hz fängt die Anzeige an zu flackern, da das menschliche Auge dort das Umschalten feststellen kann. Über einer Frequenz von 1\,MHz lässt die Intensität merklich nach. Um den Mikrocontroller stromsparend benutzen zu können, sollte aber eine möglichst geringe Frequenz verwendet werden.
 
 \subsubsection{Ansteuerungsart}
-Da für eine Einzelansteuerung jedes einzelnen Symbols zu viele Mikrocontrollerausgänge benötigt werden, wird auf das Multiplexverfahren zurückgegriffen. Dieses spielt vor allem bei einer Symbolbelegung von \(4\times4\) Symbolen auf einer Glasplatte aus.
+Da für eine Einzelansteuerung jedes einzelnen Symbols zu viele Mikrocontrollerausgänge benötigt werden, wird auf das Multiplexverfahren zurückgegriffen.
+Für die endgültige Anzeige ist eine Matrix mit \(4\times4\) Symbolen geplant.
 
 %Bisher wurden die Glasplatten nur einzeln angesteuert. Dadurch wären bei einem \(2\times4\) Aufbau 8 Anschlüsse an jeder Glasplatten nötig. Will man mehrere Symbole, z.B. \(4\times4\) anschließen, wären pro Glasplatte 16 Anschlüsse von Nöten. Um den Aufwand zu verringern, stehen 2 Möglichkeiten zur Verfügung: 
 %Zum einen kann auf die Glasplatte 1 die Elektrodenstruktur aufgebracht werden und jede Elektrode einzeln verbunden werden. Auf Glasplatte 2 muss dann nur eine gemeinsame Fläche für alle Anzeigesymbole angebracht werden, da nur die Symbole an der Stelle aufleuchten, an der beide Glasplatten angesteuert werden. Eine weitere Möglichkeit ist die Ansteuerung per Multiplexverfahren. Hierbei müssen z.B. bei einer \(4\times4\) Platte nur 4 Anschlüsse pro Platte angebracht werden. Das verschafft mehr Platz für die Anschlüsse an der Glasplatte und die Fehlerwahrscheinlichkeit von schlechter Kontaktierung wird verringert. Außerdem kann dadurch ein kleinerer Mikrocontroller eingesetzt werden, da weniger Ausgangspins benötigt werden. Dadurch steigen jedoch die Anforderungen an die Software. Wie die Platten dann an den Mikrokontroller angeschlossen werden steht im Abschnitt \ref{subsec:platine}.\\
