--- a/paper/Kapitel/elektronik.tex
+++ b/paper/Kapitel/elektronik.tex
@@ -65,7 +65,7 @@ Als Spannungsversorgung könnten somit 2 Standard Batterien mit je \(1,5\,\textr
 Um das LCD Display mit der Ansteuerplatine zu verbinden gibt es mehrere Möglichkeiten. Da nur ein sehr geringer Strom (\(\mu A\)) fließt und eine Spannung von \(3\,\textrm{V}\) angelegt wird ist nur eine dünne Drahtzuleitung (\(0,5\, mm^2\)) von Nöten. Im folgenden werden verschiedene Verfahren diskutiert mit denen eine Anbindung möglich ist.
 
 \subsubsection{Klemmen}
-Im ersten Test wurde das Display über Klemmen angesteuert. Dies hat einwandfrei funktioniert, jedoch beschädigen die Klemmen die Glasplatten und stellen somit keine gute Endlösung dar.
+Im ersten Test wurde das Display über Klemmen angesteuert. Dies hat einwandfrei funktioniert, jedoch beschädigen die Klemmen die Glasplatten und stellen somit keine gute Lösung dar.
 
 \subsubsection{Conductive Paint}
 \cite[\textit{Conductive Paint}]{conductivepaint} ist eine schwarze leitfähige Farbe die von der Firma bareconductive hergestellt wird. Die Flüssigkeit kommt aus der Tube und braucht circa 15 Minuten zum Trocknen. Jedoch ist die Festigkeit zu schwach und kann die Drähte nicht fest an den Glasplatten fixieren. Deshalb muss noch eine zusätzliche Schicht Kleber (2-Komponentenkleber, Sekundenkleber) darüber angebracht werden, um die Festigkeit zu steigern.
