--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -5,11 +5,7 @@
 Um herauszufinden, welche Strukturen sich mit einem selbst-hergestellten LCD darstellen lassen, wurde ein Testmuster mit verschiedenen Anzeigen entwickelt (Abbildung \ref{testmuster}).
 Durch das Testmuster wurde die Anzeige von beliebigen Motiven, und der kleinsten Liniendicke für die Anzeige getestet.
 Dazu wurde die Renard-Serie R''5 verwendet, jedoch war auch die kleinste gewählte Linienstärke von 0,4\,mm möglich.
-Aus dem Testmuster wurden zwei Vorlagen für die beiden Glasplatten erstellt, die zusätzlich noch die Stromzuleitungen enthalten
-(Abbildung \ref{testmuster_seiten}).
-Dies wurde zum Testen davon verwendet, ob die Dicke der Zuleitung zu einem anderen Verhalten führt.
-Jedoch konnte keines beobachtet werden.
-
+Aus dem Testmuster wurden zwei Vorlagen für die beiden Glasplatten erstellt (Abbildung \ref{testmuster_seiten}), die zusätzlich noch die Stromzuleitungen enthalten.
 
 \label{testmuster-seite1}
 \subsection{Funktionsweise}
@@ -140,10 +136,10 @@ Die Indikatoren für eine gelungene Oxidierung sind, dass die für die leitende 
 
 %Die Indikatoren für eine gelungene Oxidierung sind:
 
-\begin{itemize}
-\item Die für die leitende Schicht typische braune Färbung muss merklich verschwinden
-\item Eine Messung mittels eines Multimeters muss eine Nennenswerte Änderung der Leitfähigkeit ergeben\\
-\end{itemize}
+%\begin{itemize}
+%\item Die für die leitende Schicht typische braune Färbung muss merklich verschwinden
+%\item Eine Messung mittels eines Multimeters muss eine Nennenswerte Änderung der Leitfähigkeit ergeben\\
+%\end{itemize}
 
 \subsubsection{Wasserstoffperoxid}
 
