--- a/paper/Kapitel/abstract.tex
+++ b/paper/Kapitel/abstract.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
   % 
-Diese Paper ist im Zuge der DIY Vorlesung an der Friedrich-Alexander-Universität Erlangen-Nürnberg entstanden und beschreibt die Herstellung einer Binäruhr mit einem Liquid-Crystal-Display. Detailliert beschrieben und mit vielen Erfahrungen erweitert ist vor allem der Beitrag zur Herstellung eines Flüssigkristalldisplays. So haben wir verschiedene Ansätze zur Elektrodenkstrukturierung und Oxidierung der leitend beschichteten Glasplatten getestet. Eine Testplatine zur Ansteuerung des Displays wurde ebenfalls erstellt. Im weiteren Verlauf müssen die Elektronik getestet, das Programm geschrieben und ein Gehäuse hergestellt werden.
+Diese Paper ist im Zuge der DIY Vorlesung an der Friedrich-Alexander-Universität Erlangen-Nürnberg entstanden und beschreibt die Herstellung einer Binäruhr mit einem Liquid-Crystal-Display. Detailliert erläutert und mit vielen Erfahrungen erweitert ist vor allem der Beitrag zur Herstellung eines Flüssigkristalldisplays. So haben wir verschiedene Ansätze zur Elektrodenkstrukturierung und Oxidierung der leitend beschichteten Glasplatten getestet. Eine Testplatine zur Ansteuerung des Displays wurde ebenfalls erstellt. Im weiteren Verlauf müssen die Elektronik getestet, das Programm geschrieben und ein Gehäuse hergestellt werden.
 
 %Die aufgeführten Erkenntnisse vereinfachen die zukünftige Herstellung von LCDs enorm und stellen einen großen Informationsgewinn für die Menschheit dar. Denn diese Displays sind sehr energiesparend und können äußerst vielseitig für verschiedenste Anwendungen eingesetzt werden.
 %
