--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -1,5 +1,5 @@
 \section{LCD}
-\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.
+\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien. Immer eine Schutzbrille tragen!
 
 \subsection{Testplatine}
 Um herauszufinden, welche Strukturen sich mit einem selbst-hergestellten LCD darstellen lassen, wurde ein Testmuster mit verschiedenen Anzeigen entwickelt (Abbildung \ref{testmuster}).
