Link Darth Vader hinzugefügt

--- a/paper/Kapitel/bibliography.tex
+++ b/paper/Kapitel/bibliography.tex
@@ -53,6 +53,14 @@ Conrad electronics
 \hskip 1em plus 0.5em minus 0.4em\relax
 \url{https://www.conrad.de/de/fotokopierlack-crc-kontakt-chemie-positiv-20-82004-aa-100-ml-813923.html}
 
+\bibitem{darthvader}
+ATMEL
+(am 7.~Februar abgerufen)
+\emph{Darth Vader Icon}
+\label{darthvader}
+\hskip 1em plus 0.5em minus 0.4em\relax
+\url{https://www.iconfinder.com/icons/216968/anakin_darth_jedi_sith_vader_icon}
+
 \bibitem{fablabwerkzeuge}
 FAUFabLab
 (am 7.~Februar abgerufen)
