--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -45,7 +45,7 @@ Aus dem Testmuster wurden zwei Vorlagen für die beiden Glasplatten erstellt (Ab
 
 Das Display besteht aus zwei zusammengeklebten Glasplatten mit einem Abstand von circa 10 Mikrometern. Auf den Glasplatten befinden sich leitende Schichten aus Indium-Zinn. Diese Schichten werden später zur Darstellung von Zeichen oder Symbolen verwendet. Der grundsätzliche Aufbau eines LCD Displays besteht aus folgenden Teilen (siehe Abbildung \ref{lcdaufbau}):
 \begin{itemize}
-\item Zwei Glasplatten, die mit der leitenden Schicht überzogenen Innenseiten liegen sich gegenüber (Markierung 2 und 4)
+\item Zwei Glasplatten, deren mit leitender Schicht überzogene Innenseiten sich gegenüberliegen (Markierung 2 und 4)
 \item Zwischen den Glasplatten: Flüssigkristall (Markierung 3)
 \item Außerhalb der Glasplatten: Polarisationsfolien (Markierung 1 und 5)
 \item Eine Reflektorfolie auf einer Seite (Markierung 6)
