--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -53,7 +53,7 @@ Das Display besteht aus zwei zusammengeklebten Glasplatten mit einem Abstand von
 Die Glasplatten werden so präpariert, dass die zigarrenförmigen Moleküle auf jeweils einer Glasplatte in eine Richtung zeigen. Auf der gegenüberliegenden Seite sind sie um 90 Grad gedreht. Der Flüssigkristall beschreibt eine “Schraubenstruktur”.
 Diese verschraubte Struktur veranlasst polarisiertes Licht, ihr zu folgen. Ohne Spannung wird die Polarisationsebene um 90 Grad gedreht und das Licht wird durchgelassen und reflektiert. Beim Anlegen von Spannung (siehe Kapitel \ref{sec:elektronik}) richten sich die Moleküle kollektiv senkrecht zu den Elektroden aus.
 Somit existiert also für das Polarisationslicht keine Schraubenstruktur mehr.
-Folglich wird beim Durchgang durch die Zelle der Polarisationszustand nicht beeinflusst, was schließlich dazu führt, dass die Bereiche dunkel erscheinen (Quellen: \cite{Bauanleitung} \cite{aufbau_und_funktion})
+Folglich wird beim Durchgang durch die Zelle der Polarisationszustand nicht beeinflusst, was schließlich dazu führt, dass die Bereiche dunkel erscheinen (Quellen: \cite{Bauanleitung} \cite{aufbau_und_funktion}).
 
 
 %\subsection{Produktionsschritte}
@@ -70,7 +70,7 @@ Folglich wird beim Durchgang durch die Zelle der Polarisationszustand nicht beei
 
 \subsection{Elektrodenstrukturaufbringung}
 
-%In diesem Kapitel wird beschrieben, wie die gewünschten Strukturen auf die leitend beschichteten Glasplatten aufgebracht werden können. Hierfür kommen 3 Methoden in Betracht. Mittels eines fotosensitiven Lacks, Folien aus dem Folienplotter des FAUFabLab oder per Edding.\\
+In diesem Kapitel wird beschrieben, wie die gewünschten Strukturen auf die leitend beschichteten Glasplatten aufgebracht werden können. Hierfür kommen Fotolack, Klebefolien oder Edding in Betracht.% Mittels eines fotosensitiven Lacks, Folien aus dem Folienplotter des FAUFabLab oder per Edding.\\
 
 \subsubsection*{Fotolack}
 
