--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -106,7 +106,7 @@ Abbildung \ref{Fotolackverfahren} zeigt, dass durch das Fotolackverfahren ein un
 %\end{figure}
 
 \subsubsection*{Klebefolie}\label{subsec:klebefolie}
-Muster werden entworfen und mit einem Plotter aus einer selbstklebenden-Folie ausgeschnitten. Das Muster wird auf einer Übertragungsfolie aufgebracht und auf die leitende Schicht der Glasplatten aufgeklebt (Abbildung \ref{Uebertragen_der_Klebefolie}), anschließend wird die Übertragungsfolie abgezogen. Nun sind alle Stellen, die später leuchten sollen, abgedeckt. Versuche haben bestätigt, dass das Abziehen der Klebefolie die leitende Indium-Zinn Schicht nicht entfernt oder merklich schädigt. Die Vorteile der Folie sind, dass komplexe Strukturen hergestellt werden können und sehr scharfe Kanten entstehen. Allerdings ist das anschließende Abziehen der Folie sehr mühsam (Abbildung \ref{Abziehen_der_Folie}).
+Muster werden entworfen und mit einem Plotter aus einer selbstklebenden-Folie ausgeschnitten. Das Muster wird auf einer Übertragungsfolie aufgebracht und auf die leitende Schicht der Glasplatten aufgeklebt (Abbildung \ref{Uebertragen_der_Klebefolie}), anschließend wird die Übertragungsfolie abgezogen. Nun sind alle Stellen, die später leuchten sollen, abgedeckt. Versuche haben bestätigt, dass das Abziehen der Klebefolie die leitende Indium-Zinn Schicht nicht entfernt oder merklich schädigt. Die Vorteile der Folie sind, dass komplexe Strukturen hergestellt werden können und sehr scharfe Kanten entstehen. Allerdings ist das anschließende Abziehen der Folie (Abbildung \ref{Abziehen_der_Folie}) sehr mühsam.
 
 
 \subsubsection*{Edding}
