--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -125,7 +125,7 @@ Um die Elektroden freizulegen muss an allen Stellen, an denen das Display nichts
 Die leitende Indium-Zinn-Schicht lässt sich sehr schnell und einfach mit Salzsäure (5\%) entfernen. Hierfür wird die Glasplatte mit der schützenden Schicht (Fotolack, Klebefolie oder Edding), in Salzsäure gelegt (Abbildung \ref{Aetzvorgang}). Bereits nach 15 Sek. ist der Vorgang beendet. Gegebenenfalls können die Platten auch länger im Salzsäurebad verweilen. Dies könnte allerdings dazu führen, dass die Salzsäure unter die Klebefolie zieht und zu viel wegätzt.
 
 \subsubsection*{Platinenätzmittel}
-Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad (Natriumpersulfatlösung) möglich, welches im FAUFabLab zum Ätzen von Platinen genutzt wird. Nach ca. 20 Minuten war bei unserem Versuch die leitende Indium-Zinn-Schicht entfernt. Diese Methode stellt also eine gute Alternative zur Salzsäure dar.
+Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad (Natriumpersulfatlösung) möglich, welches im FAUFabLab zum Ätzen von Platinen genutzt wird. Nach ca. 20 Minuten war bei unserem Versuch die leitende Indium-Zinn-Schicht entfernt. Diese Methode stellt also eine Alternative zur Salzsäure dar.
 
 Qualitativ waren keine Unterschiede zu erkennen aber der Vorteil der Salzsäure liegt darin, dass sie die Ätzung schneller durchführt. Deshalb wird diese Methode gewählt.
 
@@ -148,7 +148,7 @@ Die Indikatoren für eine gelungene Oxidierung sind, dass die für die leitende 
 %\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
 Eine Testplatte wurden in ein 40\%-Wasserstoffperoxid-Bad gegeben und nach 1h wieder entnommen. Leider war dieser Oxidierungsversuch nicht erfolgreich.
-Nun soll ein Langzeittest über mehrere Tage Erkenntnisse darüber geben, ob der Oxidierungsvorgang bei einer längeren Einwirkungsdauer funktioniert. Dies war nicht der Fall.
+Nun soll ein Langzeittest über 5 Tage Erkenntnisse darüber geben, ob der Oxidierungsvorgang bei einer längeren Einwirkungsdauer funktioniert. Dies war nicht der Fall.
 
 Somit lässt sich festhalten, dass eine Oxidierung mittels Wasserstoffperoxid bei Raumtemperatur nicht möglich ist.
 
