--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -154,7 +154,7 @@ Somit lässt sich festhalten, dass eine Oxidierung mittels Wasserstoffperoxid be
 
 \subsubsection{Wasserstoffperoxid mit Hitze}
 
-Da die Oxidierung bei Raumtemperatur nicht funktioniert hat wurde ein Versuch gestartet, die Indium-Zinn Schicht in erwärmten Wasserstoffperoxid durchzuführen. Auch hier konnte keine Oxidierung festgestellt werden.
+Da die Oxidierung bei Raumtemperatur nicht funktioniert hat wurde ein Versuch gestartet, die Indium-Zinn Schicht in erhitztem Wasserstoffperoxid (ca. 370K) durchzuführen. Auch hier konnte nach zwei Stunden keine Oxidierung festgestellt werden.
 
 \subsubsection{Hitze durch einen Heißluftföhn}
 
