--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -158,7 +158,7 @@ Da die Oxidierung bei Raumtemperatur nicht funktioniert hat wurde ein Versuch ge
 
 \subsubsection{Hitze durch einen Heißluftföhn}
 
-Ein Test mit einem Heißluftföhn, der auf 300 Grad eingestellt wurde ergab, das nach einer Einwirkzeit von 1h die Schicht oxidiert ist. Jedoch ist keine großflächige Aufbringung der Hitze möglich. Deshalb ist für Plattengröße von 110mm x 100mm das Verfahren unbrauchbar.
+Ein Test mit einem Heißluftföhn, der auf 300 Grad eingestellt wurde ergab, das nach einer Einwirkzeit von 1h die Schicht oxidiert ist. Jedoch ist eine großflächige Aufbringung der Hitze nicht möglich bzw. sehr aufwendig. Deshalb ist für Plattengröße von 110mm x 100mm das Verfahren unbrauchbar.
 
 \subsubsection{Hitze im Ofen}
 
