--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -185,7 +185,7 @@ Von nun an sollte darauf geachtet werden, dass die sauberen Platten nicht wieder
 
 \subsection{Reiborientierung}
 
-Jetzt müssen die leitenden Schichten noch einer Reiborientierung unterzogen werden. Hierzu die mit einem fusselfreien Tuch abgetrockneten Glasplatten mit der leitenden Seite nach oben auf eine rutschfeste und harte Unterlage legen. Jetzt mit einem fusselfreien Tuch mehrfach unter festem Druck in eine Richtung streichen (siehe Abbildung \ref{Orientierung_der_Molekuele_durch_Reiben}). Glasplatte 1 muss genau um 90 Grad versetzt zur Glasplatte 2 orientiert werden.
+Jetzt müssen die leitenden Schichten noch einer Reiborientierung unterzogen werden. Hierzu die mit einem fusselfreien Tuch abgetrockneten Glasplatten mit der leitenden Seite nach oben auf eine rutschfeste und harte Unterlage legen. Jetzt mit einem fusselfreien Tuch mehrfach unter festem Druck in eine Richtung streichen (Abbildung. \ref{Orientierung_der_Molekuele_durch_Reiben}). Platte 1 muss genau um 90 Grad versetzt zur Glasplatte 2 orientiert werden (vgl. \ref{Bauanleitung}).
 
 \subsection{Verkleben und Befüllen}
 
