--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -189,7 +189,7 @@ Jetzt müssen die leitenden Schichten noch einer Reiborientierung unterzogen wer
 
 \subsection{Verkleben und Befüllen}
 
-Nun die zugeschnittene Abstandhalterfolie auf eine Glasplatte legen. Als Abstandhalterfolie kann die Folie einer gewöhnlichen Verpackung einer Zigarettenschatel verwendet werden. 
+Nun die zugeschnittene Abstandhalterfolie auf eine Glasplatte legen. Als Abstandhalterfolie kann die Folie einer gewöhnlichen Verpackung einer Zigarettenschachtel verwendet werden. 
 Anschließend die zweite Glasplatte auflegen und zur Ersten ausrichten, dass die Anzeigesymbole so exakt wie möglich übereinander liegen. Nun die zwei Glasplatten an den Abstandhalterfolien zusamendrücken und zwei gegenüberliegende Seiten mit 2-Komponentenkleber verkleben (siehe Abbildung \ref{Verkleben_von_zwei_Seiten_des_Displays}). Sobald dieser hart geworden ist kann mit der Befüllung des Flüssigkristalls begonnen werden.
 Nur sehr wenig Flüssigkristall mit einer Pipette entnehmen und an eine offene Seite auftragen. Durch den Kapillareffekt zieht dieser von selbst ein (siehe Abbildung \ref{Einfuehren_des_Fluessigkristalls}). Wenn das Display komplett vom Flüssigkristall durchzogen ist können die beiden noch offenen Seiten ebenfalls mit 2-Komponentenkleber verklebt werden.\\
 
@@ -198,7 +198,7 @@ Die Abstandhalter in eine Richtung ausrichten, sodass kein Folienstreifen senkre
 Außerdem sollte darauf geachtet werden, dass die Folien am Rand angebracht werden. Würde die Folie in die Mitte gelegt kann an diese Stelle kein Flüssigkristall gelangen und somit entstehen Flecken an diesen Stellen (Vergleiche Abbildung \ref{Spannung_anlegen}).
 
 \subsection{Anzeigefähigkeit}
-Selbst die kleinste Zuleitung (Dicke 1\,mm) bei den kleinen Rechtecken versorgt diese sicher mit Spannung und sie können somit angezeigt werden. Die kleinste Struktur beim Strukturtest wird ohne Probleme angezeigt (Dicke 0,4\,mm). Der Grund dafür sind die scharfen Kanten, die durch den Folienplott erreicht werden. Die Ausrichtung ist gut möglich, da die Struktur nach der Oxidierung der Glasplatten noch leicht, aber dennoch gut sichtbar ist. Komplexe Strukturen (Walter White, Darth Vader, Jürgen) (Vergleiche Abbildung \ref{testmuster}) können ebenso ohne Probleme angezeigt werden.
+Selbst die kleinste Zuleitung (Dicke 1\,mm) bei den kleinen Rechtecken versorgt diese sicher mit Spannung und sie können somit angezeigt werden. Die kleinste Struktur beim Strukturtest wird ohne Probleme angezeigt (Dicke 0,4\,mm). Der Grund dafür sind die scharfen Kanten, die durch den Folienplott erreicht werden. Die Ausrichtung ist gut möglich, da die Struktur nach der Oxidierung der Glasplatten noch leicht, aber dennoch gut sichtbar ist. Komplexe Strukturen (wie z.B. Walter White und Darth Vader) (Vergleiche Abbildung \ref{testmuster}) können ebenso ohne Probleme angezeigt werden.
 
 \begin{figure}[]
     \centering
