--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -11,7 +11,7 @@ Aus dem Testmuster wurden zwei Vorlagen für die beiden Glasplatten erstellt (Ab
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.5\linewidth, keepaspectratio]{Bilder/testmuster}
-	\caption{Testmuster mit verschiedenen Vierecken, Linien in der Renard-Serie R''5 und Gesichtern - u.a. Darth Vader (Mittig) und Walther White (Mitte-Unten) sowie Ausrichtungspunkte}
+	\caption{Testmuster mit verschiedenen Vierecken, Linien in der Renard-Serie R''5 und Gesichtern - u.a. Darth Vader (Mittig) und Walther White (Mitte-Unten) - sowie Ausrichtungspunkte}
 	\label{testmuster}
 \end{figure}
 
