--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -195,7 +195,7 @@ Nur sehr wenig Flüssigkristall mit einer Pipette entnehmen und an eine offene S
 
 Wichtig ist, dass nicht an beiden Seiten der Flüssigkristall aufgetragen wird, sondern nur an einer.
 Die Abstandhalter in eine Richtung ausrichten, sodass kein Folienstreifen senkrecht zu einem anderen steht. Dadurch wird ein gutes einziehen des Flüssigkristalls gewährleistet. Querliegende Folienabschnitte verhindern einen zügigen und vollständigen Einzug.
-Außerdem sollte darauf geachtet werden, dass die Folien am Rand angebracht werden. Würde die Folie in die Mitte gelegt kann an diese Stelle kein Flüssigkristall gelangen und somit entstehen Flecken an diesen Stellen (Vergleiche Abbildung \ref{Spannung_anlegen}).
+Außerdem sollte darauf geachtet werden, dass die Folien am Rand angebracht werden. Würde die Folie in die Mitte gelegt kann an diese Stelle kein Flüssigkristall gelangen und somit entstehen Flecken an diesen Stellen (Vergleiche Mitte von Abbildung \ref{Spannung_anlegen}).
 
 \subsection{Anzeigefähigkeit}
 Selbst die kleinste Zuleitung (Dicke 1\,mm) bei den kleinen Rechtecken versorgt diese sicher mit Spannung und sie können somit angezeigt werden. Die kleinste Struktur beim Strukturtest wird ohne Probleme angezeigt (Dicke 0,4\,mm). Der Grund dafür sind die scharfen Kanten, die durch den Folienplott erreicht werden. Die Ausrichtung ist gut möglich, da die Struktur nach der Oxidierung der Glasplatten noch leicht, aber dennoch gut sichtbar ist. Komplexe Strukturen (wie z.B. Walter White und Darth Vader) (Vergleiche Abbildung \ref{testmuster}) können ebenso ohne Probleme angezeigt werden.
