--- a/paper/Kapitel/elektronik.tex
+++ b/paper/Kapitel/elektronik.tex
@@ -13,7 +13,7 @@ Es gibt zwei ausschlaggebende Kriterien:
 \item Spannung, bei der ein möglichst geringer Strom fließt\\
 \end{itemize}
 
-Unter einer Rechteck-Wechselspannung von -2\,V - +2\,V wird die Anzeige zu schwach, um klar etwas erkennen zu können. Mit steigender Spannung nimmt nur die Schnelligkeit zu, mit der das Anzeigefeld angezeigt wird, die Intensität nimmt nicht weiter zu. Ab einer Spannung von 6V besteht die Gefahr, dass auch benachbarte Felder aufleuchten. So wurde bei unserem Testdesign (Abbildung \ref{testmuster}) \textit{Darth Vader} auf Platte 1 und die \textit{kleinen Rechtecken} auf Platte 2 angeschlossen. Die \textit{kleinen Rechtecken} wurden angezeigt.
+Unter einer Rechteck-Wechselspannung von -2\,V - +2\,V wird die Anzeige zu schwach, um klar etwas erkennen zu können. Mit steigender Spannung nimmt nur die Schnelligkeit zu, mit der das Anzeigefeld angezeigt wird - die Intensität nimmt nicht weiter zu. Ab einer Spannung von 6V besteht die Gefahr, dass auch benachbarte Felder aufleuchten. So wurde bei unserem Testdesign (Abbildung \ref{testmuster}) \textit{Darth Vader} auf Platte 1 und die \textit{kleinen Rechtecken} auf Platte 2 angeschlossen. Die \textit{kleinen Rechtecken} wurden angezeigt.
 
 Die Stromstärken wurden mit einem Multimeter gemessen. Im Ruhezustand hat das Messgerät bereits einen Strom von -2\,$\mu$A 
  angezeigt. Wir bewegen uns im Mikroamperebereich weshalb die folgenden Messwerte nur als Richtwerte zu verstehen sind. Sie spiegeln aber sehr gut wieder, dass ein LCD sehr energiesparend ist.
