--- a/paper/Kapitel/ausblick.tex
+++ b/paper/Kapitel/ausblick.tex
@@ -13,7 +13,7 @@ Des Weiteren wird ein Gehäuse mit Hilfe des Lasercutters aus Acryl gefertigt.
 
 Um rechtzeitig die Batterien wechseln zu können, wäre eine Anzeige denkbar, die als Bild eine leere Batterie anzeigt. Mithilfe der Spannung der Batterie kann die Batterieladung bestimmt werden und ist ein Indikator, wann die Batterien gewechselt werden müssen.
 
-Des Weiteren ist denkbar, die Uhr um ein Funkuhrmodul zu erweitern, sodass die Uhrzeit nicht manuell eingestellt werden muss. Zusätzlich ist eine Weckfunktion denkbar.
+Des Weiteren ist denkbar, die Uhr um ein Funkuhrmodul zu erweitern, sodass die Uhrzeit nicht manuell eingestellt werden muss. Zusätzlich ist eine Weckfunktion nicht ausgeschlossen.
 
 %Motiviert durch ein Standardwecker mit LCD, kann ein DC-DC Spannungswandler eingesetzt werden, um die Uhr mit lediglich einer Batterie betreiben zu können. Somit besteht die Möglichkeit, die Größe der Uhr zu verkleinern.
 
