--- a/paper/Kapitel/dankesworte.tex
+++ b/paper/Kapitel/dankesworte.tex
@@ -1,6 +1,6 @@
 \section{Danksagung}
 
-Ein großes und umfangreiches Projekt wie dieses ist nicht ohne Hilfe realisierbar. Deshalb bedanken wir uns bei unserem 5. Teammitglied Markus Walther und dem FAUFabLab Team für ihre großartige Unterstützung.
+Ein umfangreiches Projekt wie dieses ist nicht ohne Hilfe realisierbar. Deshalb bedanken wir uns bei unserem 5. Teammitglied Markus Walther und dem FAUFabLab Team für ihre großartige Unterstützung.
 
 %Ein großes und umfangreiches Projekt wie dieses ist natürlich nicht alleine realisierbar. Wir hatten viele freundliche Mithelfer, die uns jederzeit mit Tat und Rat zur Seite standen.\\
 
